--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "version": "1.0.0",
   "main": "ind  ex.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
