--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "version": "1.0.0",
   "main": "ind  ex.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
